add new column in bus
