# docs/swagger.json
@@ -464,8 +464,17 @@
                 "id": {
                     "type": "integer"
                 },
+                "number": {
+                    "type": "string"
+                },
+                "route": {
+                    "$ref": "#/definitions/bus-service_internal_biz.Route"
+                },
                 "routeID": {
                     "type": "integer"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
@@ -536,14 +545,22 @@
             "type": "object",
             "required": [
                 "driverID",
-                "routeID"
+                "number",
+                "routeID",
+                "status"
             ],
             "properties": {
                 "driverID": {
                     "type": "string"
                 },
+                "number": {
+                    "type": "string"
+                },
                 "routeID": {
                     "type": "integer"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
